<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/darkgrey"
              android:orientation="vertical">
    <include
            layout="@layout/toolbar"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:text="@string/header_our_offerings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:gravity="left"
                android:textColor="@color/green"/>

        <TextView
                android:text="@string/footer_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_companies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_reskilling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_mentors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_eventss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_blogss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_aboutuss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>
        <TextView
                android:text="@string/footer_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>


    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView
                android:text="@string/header_we_are_on_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:gravity="left"
                android:textColor="@color/green"/>

        <TextView
                android:text="@string/footer_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_facebooklogo"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

        <TextView
                android:text="@string/footer_linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_linkedinlogo"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

        <TextView
                android:text="@string/footer_instagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_instagramlogo"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

        <TextView
                android:text="@string/footer_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_twitterlogo"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

        <TextView
                android:text="@string/footer_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_youtubelogo"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <TextView
                android:text="@string/header_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:gravity="left"
                android:textColor="@color/green"/>

        <TextView
                android:text="@string/footer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingBottom="10dp"
                  android:orientation="vertical">
        <TextView
                android:text="@string/header_aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textSize="14sp"
                android:gravity="left"
                android:textColor="@color/green"/>

        <TextView
                android:text="@string/footer_aboutusdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingExtra="4dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingBottom="10dp"
                  android:orientation="horizontal">
        <TextView
                android:text="@string/footer_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/green"/>
        <View android:layout_width="1dp"
              android:layout_height="match_parent"
              android:background="@color/green"/>
        <TextView
                android:text="@string/footer_termsconditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/green"/>
        <View android:layout_width="1dp"
              android:layout_height="match_parent"
              android:background="@color/green"/>
        <TextView
                android:text="@string/footer_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="12sp"
                android:gravity="left"
                android:textColor="@color/green"/>


    </LinearLayout>

</LinearLayout>
