<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            layout="@layout/toolbar_back"/>

    <com.jobsforher.customviews.CustomFontTextView
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:text="@string/signup_education_process_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="22dp"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>

    <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <com.jobsforher.customviews.CustomFontButton
                    android:id="@+id/btnEducation"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/education"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/curved_dark_pink"
                    android:layout_height="wrap_content"/>

            <com.jobsforher.customviews.CustomFontButton
                    android:id="@+id/btnWork"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/work"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:textAllCaps="false"
                    android:background="@drawable/curved_blue"
                    android:layout_height="wrap_content"/>

            <com.jobsforher.customviews.CustomFontButton
                    android:id="@+id/btnLifeExp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/life"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:textAllCaps="false"
                    android:background="@drawable/curved_pink"
                    android:layout_height="wrap_content"/>

            <com.jobsforher.customviews.CustomFontButton
                    android:id="@+id/btnSkills"
                    android:layout_width="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/skills"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:padding="15dp"
                    android:layout_margin="10dp"
                    android:textAllCaps="false"
                    android:background="@drawable/curved_light_blue"
                    android:layout_height="wrap_content"/>


        </LinearLayout>


    </HorizontalScrollView>

    <com.jobsforher.customviews.CustomFontButton
            android:id="@+id/btnAddEducation"
            android:layout_width="wrap_content"
            android:textColor="@color/green"
            android:text="@string/add_education"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="15dp"
            android:textAllCaps="false"
            android:background="@drawable/curved_green_border"
            android:layout_height="wrap_content"/>

    <com.jobsforher.customviews.CustomFontButton
            android:id="@+id/btnAddWork"
            android:layout_width="wrap_content"
            android:textColor="@color/green"
            android:text="@string/add_work"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="15dp"
            android:visibility="gone"
            android:textAllCaps="false"
            android:background="@drawable/curved_green_border"
            android:layout_height="wrap_content"/>


    <com.jobsforher.customviews.CustomFontButton
            android:id="@+id/btnAddLifeExp"
            android:layout_width="wrap_content"
            android:textColor="@color/green"
            android:text="@string/add_life"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:visibility="gone"
            android:padding="15dp"
            android:textAllCaps="false"
            android:background="@drawable/curved_green_border"
            android:layout_height="wrap_content"/>


    <com.jobsforher.customviews.CustomFontButton
            android:id="@+id/btnAddSkills"
            android:layout_width="wrap_content"
            android:textColor="@color/green"
            android:text="@string/add_skills"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:padding="15dp"
            android:visibility="gone"
            android:textAllCaps="false"
            android:background="@drawable/curved_green_border"
            android:layout_height="wrap_content"/>




</LinearLayout>