<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:padding="10dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_text"
            android:fontFamily="@font/opensansregular"
            android:textColor="#484848"
            android:textAlignment="center"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp"
                android:background="#6EEE47"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/no"
                android:textColor="#6EEE47"
                android:background="@drawable/curved_green_border"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:textAllCaps="false"/>


    </LinearLayout>


</LinearLayout>